--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -75,5 +75,32 @@
 <script>prettyPrint();</script>
 <script src="scripts/linenumber.js"></script>
 <script src="scripts/main.js"></script>
+
+<?js if (env.conf.templates.yandexMetrika) { ?>
+<script type="text/javascript">
+(function (d, w, c) {
+    (w[c] = w[c] || []).push(function() {
+        try {
+            w.yaCounter<?js= env.conf.templates.yandexMetrika ?> = new Ya.Metrika({id:<?js= env.conf.templates.yandexMetrika ?>,
+                    clickmap:true,
+                    trackLinks:true});
+        } catch(e) { }
+    });
+
+    var n = d.getElementsByTagName("script")[0],
+        s = d.createElement("script"),
+        f = function () { n.parentNode.insertBefore(s, n); };
+    s.type = "text/javascript";
+    s.async = true;
+    s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+
+    if (w.opera == "[object Opera]") {
+        d.addEventListener("DOMContentLoaded", f, false);
+    } else { f(); }
+})(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="//mc.yandex.ru/watch/<?js= env.conf.templates.yandexMetrika ?>" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+<?js } ?>
 </body>
 </html>
